--- a/app/views/web/ost/index/_prototype.erb
+++ b/app/views/web/ost/index/_prototype.erb
@@ -4,12 +4,15 @@
     <div id="prototypes-carousal" class="clearfix">
       <div class="iframe-wrapper position-relative">
         <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/spoon-v1.png" />
+        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
       <div class="iframe-wrapper position-relative">
         <img class="iframe-cover-img" data-name="hornet" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/hornet-v1.png" />
+        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
       <div class="iframe-wrapper position-relative">
         <img class="iframe-cover-img" data-name="tolkin" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/tolkin-v1.png" />
+        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
 
     </div>
