--- a/app/views/web/ost/index/_prototype_mobile.erb
+++ b/app/views/web/ost/index/_prototype_mobile.erb
@@ -4,21 +4,21 @@
     <li style="background-color: white; display: none" class="edge-element-first m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
         <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/spoon-v1.png" />
-        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
+        <img class="position-absolute processing-loader" style="display: none" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
 
     </li>
     <li style="background-color: white ; display: none" class="m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
         <img class="iframe-cover-img" data-name="hornet" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/hornet-v1.png" />
-        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
+        <img class="position-absolute processing-loader" style="display: none" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
 
     </li>
     <li style="background-color:white; display: none " class="m-2 mt-4">
       <div class="proto-wrapper position-relative mx-auto py-3">
         <img class="iframe-cover-img" data-name="tolkin" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/tolkin-v1.png" />
-        <img class="position-absolute processing-loader" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
+        <img class="position-absolute processing-loader" style="display: none" src="//dxwfxs8b4lg24.cloudfront.net/ost-kit/images/processed-loader-1.gif" width="30" height="30"/>
       </div>
 
     </li>
