increased OST in circulation

--- a/app/views/web/ost/ost_circulation.html.erb
+++ b/app/views/web/ost/ost_circulation.html.erb
@@ -1,1 +1,1 @@
-665065915.7607<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
+678919087<!-- random string length <%= SecureRandom.hex(SecureRandom.random_number(100) + 75) %> -->
