home page revamp

--- a/app/assets/stylesheets/web/ost-index.css
+++ b/app/assets/stylesheets/web/ost-index.css
@@ -1,6 +1,7 @@
 /*
  *= require web/ost/index/Jumbotron
  *= require web/ost/index/Prototypes
+  *=require web/ost/index/SidebySide
  *= require web/ost/index/LatestTransactions
  *= require web/ost/index/PopCorn
  //*= require web/ost/index/Subscribe
