--- a/app/views/web/ost/index/_prototype.erb
+++ b/app/views/web/ost/index/_prototype.erb
@@ -1,6 +1,7 @@
 <section class="prototypes-section my-6 position-relative mx-auto d-none d-lg-block">
 
   <div class="container-fluid">
+    <h4 class="text-center my-5">Other Applications and Use Cases Made Possible with OST Wallet SDK</h4>
     <div id="prototypes-carousal" class="clearfix">
       <div class="iframe-wrapper position-relative">
         <img class="iframe-cover-img" data-name="spoon" src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/prototype-cover/spoon-v1.png" />
