--- a/app/views/web/ost/index/_prototype_mobile.erb
+++ b/app/views/web/ost/index/_prototype_mobile.erb
@@ -1,4 +1,5 @@
 <section id="scrollSnap" class="d-block d-lg-none prototypes-section-mobile mt-6">
+  <h4 class="text-center my-5">Other Applications and Use Cases Made Possible with OST Wallet SDK</h4>
   <div class="snap-container">
     <ul class="pl-0 prototype-list ">
     <li style="background-color: white; display: none" class="edge-element-first m-2 mt-4">
