--- a/app/assets/stylesheets/web/ost/index/SidebySide.scss
+++ b/app/assets/stylesheets/web/ost/index/SidebySide.scss
@@ -1,3 +1,53 @@
+// Import theme variables
+@import "../../ost_theme/variables";
+
+.container-features{
+  background-color: $gulf-blue;
+  .header-text{
+    color : $white
+  }
+  .desc {
+    color: $white
+  }
+}
+.container-apps-built{
+  .shadow-box{
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.15);
+  }
+  .video-wrapper{
+    margin-top: -140px;
+  }
+}
+.container-ost-wallet-unique-features{
+  background-color:$yellow-bg ;
+  .info-box{
+    box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.06);
+    background-color: $white;
+    border-radius: 5px;
+  }
+
+}
+.container-use-cases{
+
+}
+.container-developer-first{
+  background-color: $cultured;
+  .border-box{
+    border: 2px solid rgb(71, 72, 86);
+    border-radius: 5px;
+
+  }
+}
+
+.container-schedule-call{
+  background-color: $gulf-blue;
+  .header-text{
+    color : $white
+  }
+  .desc {
+    color: $white
+  }
+}
 .side-by-side{
   h2{
     color: #438cad;
