--- a/app/views/web/ost/index/_news_carousel.erb
+++ b/app/views/web/ost/index/_news_carousel.erb
@@ -1,4 +1,4 @@
-<section class="container-fluid events-news-carousel" id="ost-events">
+<section class="container-fluid events-news-carousel mt-5" id="ost-events">
   <%= render :partial => "/web/ost/index/events_carousel" %>
   <div class="row container-carousel news-container">
     <div class="container">
