--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -1,39 +1,56 @@
 <section class="container-apps-built">
   <div class="container text-center my-6">
     <h3>Apps Built with the OST Wallet SDK</h3>
-    <p class="mb-6 pb-6 pb-md-0">Live on Ethereum</p>
+    <p class="mb-md-6 sub-heading">Live on Ethereum</p>
+    <div class="d-block d-md-none mb-6 pb-6 pb-md-0 ">
+      <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
+      <p class="desc-p-one">Meet the people shaping the crypto movement</p>
+    </div>
     <div class="shadow-box p-md-6 row">
       <div class="col-12 col-md-5 video-wrapper">
+        <div class="videoWrapper">
         <video autoplay="" loop="" muted="" playsinline="" poster="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-jumbo-video-cover.png" style="width: 300px">
           <source src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-jumbo-video-normal.mp4" type="video/mp4">
         </video>
         <div>
-          <a href="javascript:void(0)" class="videoSpeaker mute videoMuteUnMute" title="Click to Unmute">
+          <a href="javascript:void(0)" class="videoSpeaker videoMuteUnMute" title="Click to Unmute">
             <span></span>
           </a>
-        </div>`
+        </div>
+        </div>
       </div>
-      <div class="col-12 col-md-6 text-left">
-        <p>Meet the people shaping the crypto movement</p>
-        <p>
+      <div class="col-12 col-md-7 text-center text-md-left">
+        <div class="row px-0 mx-0">
+
+
+        <div class="d-none d-md-block col-12 px-0">
+          <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
+          <p class="desc-p-one">Meet the people shaping the crypto movement</p>
+        </div>
+
+        <p class="col-12 desc-p-two my-md-5 order-3 order-md-1 px-0">
           Pepo demonstrates that crypto UX can be gorgeous. Pepo is so fast and easy to use you’ll rethink what’s
-          possible with crypto. Pepo is the first crypto app approved by Apple and Google, with in-app purchase and
+          possible with crypto.<br> Pepo is the first crypto app approved by Apple and Google, with in-app purchase and
           cash-out options.
         </p>
-        <p>
+        <p class="col-12 desc-p-three font-weight-600 font-italic font mb-0 order-1 order-md-2 px-0">
           "Pepo shows that blockchain is ready for primetime."
         </p>
-        <p>
+        <p class="col-12 order-2 order-md-3 px-0">
           -Decrypt
         </p>
-        <p>
+        <p class="col-12 mb-0 font-weight-bold mt-4 d-none d-md-block order-md-4 px-0">
           Behind the scenes
         </p>
-        <p>
+        <p class="col-12 d-none d-md-block order-md-5 px-0">
           Pepo is powered by OST's industry-leading technology.
         </p>
-        <a href="" class="text-link">Developer Resources</a>
-        <div class="mt-6">
+          <div class="col-12 d-none d-md-inline order-md-6 px-0">
+            <a href="" class="text-link ">Developer Resources</a>
+          </div>
+
+        </div>
+        <div class="mt-4 mt-md-5">
           <a href="https://play.google.com/store/apps/details?id=com.pepo.v2.production" target="_blank" title="Download Pepo App - Android" class="d-inline-block" rel="noopener noreferrer nofollow">
             <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/google-play.png" alt="Google Play" class="img-fluid" width="175">
           </a>
