--- a/app/views/web/ost/index/_schedule_call.erb
+++ b/app/views/web/ost/index/_schedule_call.erb
@@ -1,4 +1,4 @@
-<section class="container-schedule-call">
+<section class="container-schedule-call position-relative">
   <div class="container py-6">
     <h4 class="header-text">
       Ready to Start Building?
@@ -7,5 +7,10 @@
       Schedule a call to understand how the OST Wallet SDK can be integrated into your application.
     </p>
     <a href="" class="btn btn-primary">Schedule a Call</a>
+  </div>
+  <div class="row overflow-hidden position-absolute w-100">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
+      <polygon fill="#35445B" points="0,0 0,100 100,0"></polygon>
+    </svg>
   </div>
 </section>
