--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-        <div class="p-4 d-flex flex-column">
+        <div class="p-4 d-flex flex-column text-center text-md-left">
           <div style="flex: 1 1 auto">
-            <div class="align-items-center d-flex">
+            <div class="align-items-center d-flex justify-content-center justify-content-md-start ">
               <svg width="28" height="28">
                 <switch>
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
@@ -20,9 +20,9 @@
       </div>
 
     <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-      <div class="p-4 d-flex flex-column">
+      <div class="p-4 d-flex flex-column text-center text-md-left">
         <div style="flex: 1 1 auto">
-          <div class="align-items-center d-flex">
+          <div class="align-items-center d-flex justify-content-center justify-content-md-start">
             <svg width="28" height="28">
               <switch>
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
@@ -38,9 +38,9 @@
     </div>
 
   <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-    <div class="p-4 d-flex flex-column">
+    <div class="p-4 d-flex flex-column text-center text-md-left">
       <div style="flex: 1 1 auto">
-        <div class="align-items-center d-flex">
+        <div class="align-items-center d-flex justify-content-center justify-content-md-start">
           <svg width="28" height="28">
             <switch>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#platform-hp-docs"></use>
