--- a/app/views/web/ost/index/_apps_built.erb
+++ b/app/views/web/ost/index/_apps_built.erb
@@ -6,7 +6,7 @@
       <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-logo.png" alt="Pepo Icon " class="img-fluid mb-3" width="168">
       <p class="desc-p-one">Meet the people shaping the crypto movement</p>
     </div>
-    <div class="shadow-box p-md-6 row">
+    <div class="shadow-box m-1 m-md-0 p-md-6 row">
       <div class="col-12 col-md-5 video-wrapper">
         <div class="videoWrapper">
         <video autoplay="" loop="" muted="" playsinline="" poster="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/pepo-jumbo-video-cover.png" style="width: 300px">
@@ -46,11 +46,11 @@
           Pepo is powered by OST's industry-leading technology.
         </p>
           <div class="col-12 d-none d-md-inline order-md-6 px-0">
-            <a href="" class="text-link ">Developer Resources</a>
+            <a href="<%=GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="text-link ">Developer Resources</a>
           </div>
 
         </div>
-        <div class="mt-4 mt-md-5">
+        <div class="my-4 mt-md-5">
           <a href="https://play.google.com/store/apps/details?id=com.pepo.v2.production" target="_blank" title="Download Pepo App - Android" class="d-inline-block" rel="noopener noreferrer nofollow">
             <img src="https://d3attjoi5jlede.cloudfront.net/images/pre-launch/google-play.png" alt="Google Play" class="img-fluid" width="175">
           </a>
