--- a/app/views/web/ost/index/_features_ost.erb
+++ b/app/views/web/ost/index/_features_ost.erb
@@ -1,8 +1,8 @@
 <section class="container-features">
   <div class="container">
-    <div class="row">
+    <div class="row py-3">
       <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-        <div class="p-4 d-flex flex-column text-center text-md-left">
+        <div class="pt-4 d-flex flex-column text-center text-md-left">
           <div style="flex: 1 1 auto">
             <div class="align-items-center d-flex justify-content-center justify-content-md-start ">
               <svg width="28" height="28">
@@ -20,7 +20,7 @@
       </div>
 
     <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-      <div class="p-4 d-flex flex-column text-center text-md-left">
+      <div class="pt-4 pl-md-4 d-flex flex-column text-center text-md-left">
         <div style="flex: 1 1 auto">
           <div class="align-items-center d-flex justify-content-center justify-content-md-start">
             <svg width="28" height="28">
@@ -38,7 +38,7 @@
     </div>
 
   <div class="col-12 col-md-4 d-flex my-3 my-md-5">
-    <div class="p-4 d-flex flex-column text-center text-md-left">
+    <div class="pt-4 pl-md-4 d-flex flex-column text-center text-md-left">
       <div style="flex: 1 1 auto">
         <div class="align-items-center d-flex justify-content-center justify-content-md-start">
           <svg width="28" height="28">
@@ -62,7 +62,7 @@
 
   </div>
 </section>
-<div class="row overflow-hidden">
+<div>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
     <polygon fill="#35445B" points="0,0 100,0 100,100"></polygon>
   </svg>
