--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -13,12 +13,12 @@
             <%= ost_home_page_jumbotron[0]['jumbotron_description']%>
           </p>
           <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 pr-md-0">
               <% if ost_home_page_jumbotron[0]['primary_btn_enabled_flag'] == 'on' %>
                 <a href="<%= ost_home_page_jumbotron[0]['primary_btn_link'] %>" class="btn btn-primary my-2 my-md-3 smooth-scroll w-100 " title="<%= ost_home_page_jumbotron[0]['primary_btn_title'] %>"><%= ost_home_page_jumbotron[0]['primary_btn_title'] %></a>
               <% end %>
             </div>
-            <div class="d-none d-md-block col-md-6">
+            <div class="d-none d-md-block col-md-6 pl-0">
               <% if ost_home_page_jumbotron[0]['sec_btn_enabled_flag'] == 'on' %>
                 <a href="<%= ost_home_page_jumbotron[0]['sec_btn_link'] %>" class="btn btn-secondary my-md-3 ml-md-3 smooth-scroll" title="<%=ost_home_page_jumbotron[0]['sec_btn_title'] %>"><%= ost_home_page_jumbotron[0]['sec_btn_title']%></a>
               <%end%>
@@ -29,14 +29,10 @@
         </div>
 
         <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
-          <div class="illustration w-100">
-            <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">
-              <div class="play align-middle">
-                <svg class="svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-play"></use>
-                  </switch>
-                </svg>
+          <div class="illustration w-100 position-relative">
+            <div class="btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="<%= ost_home_page_jumbotron[0]['jumbotron_video_link'] %>">
+              <div class="">
+                <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/home-page/ost-hp-youtube-play-icon.png" height="34px" width="48px"/>
               </div>
               <span class="align-middle"></span>
             </div>
