--- a/app/views/web/ost/index/_schedule_call.erb
+++ b/app/views/web/ost/index/_schedule_call.erb
@@ -1,14 +1,14 @@
 <section class="container-schedule-call position-relative">
-  <div class="container py-6">
-    <h4 class="header-text">
+  <div class="container py-6 text-center text-md-left">
+    <h4 class="header-text text-left">
       Ready to Start Building?
     </h4>
-    <p class="desc">
+    <p class="desc text-left">
       Schedule a call to understand how the OST Wallet SDK can be integrated into your application.
     </p>
-    <a href="" class="btn btn-primary">Schedule a Call</a>
+    <a href="https://calendly.com/ostdotcom" class="btn btn-primary mt-5 mt-md-1">Schedule a Call</a>
   </div>
-  <div class="row overflow-hidden position-absolute w-100">
+  <div class="position-absolute w-100">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
       <polygon fill="#35445B" points="0,0 0,100 100,0"></polygon>
     </svg>
