--- a/app/assets/stylesheets/web/ost/index/SidebySide.scss
+++ b/app/assets/stylesheets/web/ost/index/SidebySide.scss
@@ -149,7 +149,12 @@
 
   }
 }
-
+.top-triangle{
+  height: 10vw;
+  @media only screen and (min-width: 992px){
+    height: 5vw;
+  }
+}
 .container-schedule-call{
   background-color: $gulf-blue;
   .header-text{
