--- a/app/views/web/ost/index/_developer_first.erb
+++ b/app/views/web/ost/index/_developer_first.erb
@@ -1,23 +1,28 @@
-<div class="row  overflow-hidden">
+<div class="top-triangle">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
     <polygon fill="#F4F8F9" points="0,100 100,0 100,100"></polygon>
   </svg>
 </div>
 <section class="container-developer-first">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-12 col-md-4 pb-6 pb-lg-0 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
+    <div class="row align-items-center py-5">
+      <div class="col-12 col-md-4 mr-auto order-2 order-md-1 align-self-start mr-lg-auto mt-4 mt-md-3 px-4 px-lg-0">
         <h5 class="header-title">Developers First</h5>
         <p class="mt-3">
           OST Platform provides everything you need to test, integrate, and deploy your brand currency.
           Our APIs, SDKs, dashboards enable fast and painless integration into any app -- so you can focus on
           your business and leave the blockchain bits to us.
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting-started/"
-           class="btn btn-primary"
-           rel="noopener noreferrer nofollow"
-           target="_blank"
-           title="DOCS & APIs">developer resources</a>
+        <div class="text-center text-md-left">
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>platform/docs/sdk/getting-started/"
+             class="btn btn-primary"
+             rel="noopener noreferrer nofollow"
+             target="_blank"
+             title="DOCS & APIs">developer resources</a>
+        </div>
+
+
+
 
       </div>
       <div class="col-12 col-md-8 order-1 text-right pr-0 order-md-2 pt-6 pt-lg-0">
@@ -31,26 +36,29 @@
     </div>
     <div class="row pb-6">
       <div class="col-12 col-md-6 mb-3 mb-md-0">
-        <div class="border-box p-4 h-100">
-          <h6>Server-side SDKs</h6>
-          <p>
-            Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
-            and distribute tokens to your end-users.
-          </p>
-          <a href="" class="text-link">
+        <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
+          <div>
+            <h6>Server-side SDKs</h6>
+            <p>
+              Server-side SDKs (in Java, Node.js, PHP, and Ruby) that allow you to retrieve token details, register users,
+              and distribute tokens to your end-users.
+            </p>
+          </div>
+
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/getting-started/" class="text-link align-self-start">
             SERVER-SIDE SDKs
           </a>
         </div>
       </div>
       <div class="col-12 col-md-6">
-        <div class="border-box p-4 h-100">
+        <div class="border-box p-4 h-100 d-flex flex-column justify-content-between">
           <h6>Wallet SDKs</h6>
           <p>
             Wallet SDKs (in Android, iOS, and React Native) that enable your end-users to hold tokens in non-custodial
             wallets and to send and receive tokens to and from other users. User can also authorise multiple devices,
             purchase tokens in-app and cash-out.
           </p>
-          <a href="" class="text-link">
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url  %>platform/docs/sdk/getting-started/" class="text-link align-self-start">
             WALLET SDKs
           </a>
         </div>
