--- a/app/views/web/ost/index/_ost_wallet_sdk_features.erb
+++ b/app/views/web/ost/index/_ost_wallet_sdk_features.erb
@@ -79,7 +79,7 @@
 
   </div>
 </section>
-<div class="row overflow-hidden">
+<div>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none" class="svg-edge">
     <polygon fill="#F9F8E6" points="0,0 0,100 100,0"></polygon>
   </svg>
