--- a/app/views/shared/web/common/_navbarsubmenu.erb
+++ b/app/views/shared/web/common/_navbarsubmenu.erb
@@ -19,11 +19,11 @@
       <ul class="main-menu clearfix m-0 p-0 list-unstyled collapse" id="navbarToggler">
 
         <li>
-          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" class="main-nav-item" title="Developers">Developers</a>
+          <a href="<%= GlobalConstant::CompanyOtherProductUrls.dev_ost_root_url %>" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item" title="Developers">Developers</a>
         </li>
 
         <li>
-          <a href="<%=ost_watch_link %>" class="main-nav-item">
+          <a href="<%=ost_watch_link %>" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item">
             Live Transactions
             <label class="navbar-toggler p-0 m-0" for="developers" data-toggle="collapse" data-target="#navbarToggler3" aria-controls="navbarToggler3" aria-expanded="false" aria-label="Toggle navigation"></label>
           </a>
@@ -31,7 +31,7 @@
 
 
         <li>
-          <a href="javascript:void(0)" class="main-nav-item">
+          <a href="https://medium.com/ostdotcom" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item">
             Blog
             <label  class="navbar-toggler p-0 m-0" for="company" data-toggle="collapse" data-target="#navbarToggler5" aria-controls="navbarToggler5" aria-expanded="false" aria-label="Toggle navigation"></label>
           </a>
@@ -42,12 +42,12 @@
         </li>
 
         <li class="d-block d-md-none">
-          <a href="<%=calendly_link %>" class="main-nav-item" title="Developers">Schedule a call</a>
+          <a href="<%=calendly_link %>" target="_blank" rel="noopener noreferrer nofollow" class="main-nav-item" title="Developers">Schedule a call</a>
         </li>
 
       </ul>
       <div class="d-none d-md-inline ml-auto">
-        <a href ="<%=calendly_link%>"class="btn btn-secondary"> Schedule a call</a>
+        <a href ="<%=calendly_link%>" target="_blank" rel="noopener noreferrer nofollow" class="btn btn-secondary"> Schedule a call</a>
       </div>
 
 
