--- a/app/views/web/ost/index/_jumbotron-new.erb
+++ b/app/views/web/ost/index/_jumbotron-new.erb
@@ -37,7 +37,7 @@
               <span class="align-middle"></span>
             </div>
             <img
-              class="img-fluid position-relative" alt="Simple Token Play Video"
+              class="img-fluid position-relative my-5 my-md-0" alt="Simple Token Play Video"
               src="<%= ost_home_page_jumbotron[0]['jumbotron_image'] %>"/>
           </div>
         </div>
